# python_first-lesson

./: .env  .gitignore  README.md  pyproject.toml
python/: task.py  task2.py  task3.py  task4.py
